--- a/accounts/templates/accounts/index.html
+++ b/accounts/templates/accounts/index.html
@@ -27,7 +27,7 @@
             </div>
             <div class="col-md-8">
             {% block accounts_container %}
-                <h2>Bienvenido {{ user.name }} </h2>
+                <h2>Bienvenido {{ user.username }} </h2>
             {% endblock  %}
                 
             </div>
