--- a/templates/clientes/consulta_list.html
+++ b/templates/clientes/consulta_list.html
@@ -13,6 +13,9 @@
                 ID
             </th>
             <th>
+                Centro
+            </th>
+            <th>
                 Medico
             </th>
             <th>
@@ -31,6 +34,9 @@
         <tr>
             <td>
                 <a href=""># {{ consulta.pk }}</a>
+            </td>
+            <td>
+                {{ consulta.agenda.centro }}
             </td>
             <td>
                 {{ consulta.agenda.medico }}
