--- a/templates/base.html
+++ b/templates/base.html
@@ -67,8 +67,7 @@
         <div class="col-lg-12">
           <ul class="list-unstyled">
             <li class="pull-right"><a href="#top">Volver arriba</a></li>
-            <li><a href="">Inicio</a></li>
-            <li><a href="">MIAU</a></li>
+            <li><a href="/">Inicio</a></li>
           </ul>
         </div>
       </div>
