--- a/accounts/templates/accounts/index.html
+++ b/accounts/templates/accounts/index.html
@@ -7,16 +7,18 @@
 {% block container %}
      <ol class="breadcrumb">
           <li><a href="{% url 'accounts:index'%}">Inicio</a></li>
+          {% if user.is_authenticated %}
           <li class="active">Mi Cuenta</li>
+          {% endif %}
         </ol>
         <div class="row">
             <div class="col-md-4">
                 <div class="list-group">
+                {% if user.is_authenticated %}
                   <a href="#" class="list-group-item active">Mi Cuenta</a>
                   <a href="{% url 'accounts:update_user'%}" class="list-group-item">Cambiar nombre y correo electrónico</a>
                   <a href="{% url 'accounts:update_password'%}" class="list-group-item">Cambiar contraseña</a>
-                  <a href="{% url 'clientes:cliente_actualizar'%}" class="list-group-item"> Datos complementarios </a>
-                  <a href="{% url 'clientes:consulta_list'%}" class="list-group-item">Mis Consultas</a>
+                {%endif%}
                   {% if request.user.is_staff or request.user.is_superuser %}
                   <a href="{% url 'medicos:agenda_lista'%}" class="list-group-item">Agendas</a>
                   <a href="{% url 'medicos:medicos_lista'%}" class="list-group-item">Medicos</a>
