--- a/templates/base.html
+++ b/templates/base.html
@@ -9,12 +9,14 @@
 	<link rel="stylesheet" href="{% static 'assets/bootstrap.min.css' %}"media="screen" />
 	<link rel="stylesheet" href="{% static 'assets/custom.min.css' %}" media="screen" />
 	<link rel="stylesheet" href="{% static 'assets/extra.css' %}" media="screen" />
+  <link rel="icon" type="image/png" href="{% static 'icon.png' %}">
+
 </head>
 <body>
     <div class="navbar navbar-default navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <a href="{% url 'index'%}" class="navbar-brand">Clinica</a>
+          <a href="{% url 'index'%}" class="navbar-brand">Inicio</a>
           <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -24,12 +26,9 @@
         <div class="navbar-collapse collapse" id="navbar-main">
           <ul class="nav navbar-nav">
             <li>
-              <a href="{% url 'clientes:consulta_create'%}">Consultas</a>
+              <a href="{% url 'medicos:agendar_consulta'%}">Agendar</a>
             </li>
             {% if user.is_staff or user.is_superuser %}
-            <li>
-              <a href="{% url 'medicos:agendar_consulta'%}">Agendas</a>
-            </li>
             <li>
               <a href="{% url 'medicos:medico_registro'%}">Médicos</a>
             </li>
@@ -47,7 +46,7 @@
               <li><a href="{% url 'accounts:logout' %}">Salir</a></li>
             {% else %}
               <li><a href="{% url 'accounts:login' %}">Entrar</a></li>
-              <li><a href="{% url 'accounts:register' %}">Registro</a></li>
+              <li><a href="{% url 'accounts:register' %}">Registrarse</a></li>
             {% endif %}
           </ul>
         </div>
