--- a/templates/index.html
+++ b/templates/index.html
@@ -2,9 +2,9 @@
 {% block container %}
 
     <div class="jumbotron page-header">
-        <h1>Clinica</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        <p><a class="btn btn-primary">Saber Más</a></p>
+        <h2>Centro Medico Galenos</h2>
+        <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h4>
+        {#<p><a class="btn btn-primary">Saber Más</a></p>#}
     </div>
 
 {% endblock %}
